--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,31 +8,31 @@
 
         <li class="slider-item active-item">
             <div class="slider-icon">
-                <img src="assets/img/slider/slider1.jpg" alt="">
+                <img src="assets/img/slider/slider1.jpg" alt="slider1.jpg">
             </div>
 
             <div class="slider-image">
-                <img src="assets/img/slider/slider1.jpg" alt="">
+                <img src="assets/img/slider/slider1.jpg" alt="slider1.jpg">
             </div>
         </li>
 
         <li class="slider-item">
             <div class="slider-icon">
-                <img src="assets/img/slider/slider2.jpg" alt="">
+                <img src="assets/img/slider/slider2.jpg" alt="slider1.jpg">
             </div>
 
             <div class="slider-image">
-                <img src="assets/img/slider/slider2.jpg" alt="">
+                <img src="assets/img/slider/slider2.jpg" alt="slider1.jpg">
             </div>
         </li>
 
         <li class="slider-item">
             <div class="slider-icon">
-                <img src="assets/img/slider/slider3.jpg" alt="">
+                <img src="assets/img/slider/slider3.jpg" alt="slider1.jpg">
             </div>
 
             <div class="slider-image">
-                <img src="assets/img/slider/slider3.jpg" alt="">
+                <img src="assets/img/slider/slider3.jpg" alt="slider1.jpg">
             </div>
         </li>
 
@@ -53,13 +53,13 @@
 
     <div class="part-3">
         <div class="three-card">
-            <a href="yedek-parca-ve-aksesuar"><img src="assets/img/slider/slider2.jpg" alt=""></a>
+            <a href="magaza"><img src="assets/img/slider/slider2.jpg" alt=""></a>
         </div>
     </div>
 
     <div class="part-3">
         <div class="three-card">
-            <a href="yararli-icerikler"><img src="assets/img/slider/slider1.jpg" alt=""></a>
+            <a href="blog"><img src="assets/img/slider/slider1.jpg" alt=""></a>
         </div>
     </div>
 </section>
