--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,3 +1,10 @@
+<!--
+<script>
+    if (location.protocol !== 'https:') {
+    location.replace(`https:${location.href.substring(location.protocol.length)}`);
+}
+</script>
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,10 +26,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     <!-- WEBSITE DESCRIPTION -->
-    <meta name="description" content="İstanbul/Kadıköy'de Dji ürünleri için bakım, onarım, teknik servis ve destek hizmeti vermekteyiz. Yeni Dji ürünleri satışı, yedek parça ve aksesuar temini hizmetlerimiz de bulunmaktadır.">
+    <meta name="description" content="Dji ürünleri için teknik servis, bakım ve onarım hizmeti vermekteyiz. Yeni Dji ürünleri satışı, yedek parça ve aksesuar teminimiz de bulunmaktadır.">
 
     <!-- WEBSITE KEYWORDS -->
-    <meta name="keywords" content="dji destek, dji teknik destek, dji servis, dji teknik servis, drone tamir, drone aksesuar, drone yedek parça, dji, drone, tamir, destek, servis, hizmeti">
+    <meta name="keywords" content="dji destek, dji teknik destek, dji servis, dji teknik servis, drone satın al, drone tamir, drone aksesuar, drone yedek parça">
 
     <!-- WEBSITE AUTHOR -->
     <meta name="author" content="Berat Akdemir">
@@ -35,14 +42,10 @@
 
     <!-- TITLE -->
     <% if (title) { %>
-        <title>DJI Destek |
-            <%- title %>
-        </title>
-        <% } else { %>
-            <title>DJI Destek</title>
-            <% } %>
-
-
+    <title><%- title %> - DJI Destek | Teknik Servis ve Satış Hizmetleri</title>
+    <% } else { %>
+    <title>DJI Destek | Teknik Servis ve Satış Hizmetleri</title>
+    <% } %>
 
 </head>
 
