google analytics code added

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,16 @@
 
 <head>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKY90DJ47R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-HKY90DJ47R');
+    </script>
+
     <!-- META TAGS -->
     <meta charset="UTF-8">
 
