--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -312,13 +312,14 @@
         </div>
     </footer>
 
-    <!--
+    
     <script>
-    if (location.protocol !== 'https:') {
-        location.replace(`https:${location.href.substring(location.protocol.length)}`);
+    if (window.location.host !== 'localhost:5001') {
+        if (location.protocol !== 'https:') {
+            location.replace(`https:${location.href.substring(location.protocol.length)}`);
+        }
     }
     </script>
-    -->
 
     <!-- JQUERY -->
     <script src="assets/js/jquery/jquery-3.5.1.min.js"></script>
