--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,10 +20,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="assets/css/bootstrap/bootstrap-4.3.1.min.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap/bootstrap-4.3.1.min.css">
 
     <!-- FEATHER ICONS -->
-    <link rel="stylesheet" href="assets/css/feather/feather.css">
+    <link rel="stylesheet" href="/assets/css/feather/feather.css">
 
     <!-- FONTAWESOME ICONS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -38,10 +38,10 @@
     <meta name="author" content="Berat Akdemir">
 
     <!-- WEBSITE ICON -->
-    <link rel="icon" href="assets/img/logo/favicon.svg" sizes="16x16">
+    <link rel="icon" href="/assets/img/logo/favicon.svg" sizes="16x16">
 
     <!-- WEBSITE STYLE -->
-    <link rel="stylesheet" href="assets/css/style.css?v=1.4">
+    <link rel="stylesheet" href="/assets/css/style.css?v=1.5">
 
     <!-- TITLE -->
     <% if (title) { %>
@@ -68,37 +68,37 @@
 
             <div class="navbar-brand">
                 <a href="/">
-                    <img class="navbar-logo-white" src="assets/img/logo/logo-white.svg" alt="">
-                    <img class="navbar-logo-black" src="assets/img/logo/logo-black.svg" alt="">
+                    <img class="navbar-logo-white" src="/assets/img/logo/logo-white.svg" alt="">
+                    <img class="navbar-logo-black" src="/assets/img/logo/logo-black.svg" alt="">
                 </a>
             </div>
 
             <div class="navbar-menu">
                 <ul class="navbar-menu-list">
                     <li class="navbar-menu-item dropable">
-                        <a href="teknik-servis">Teknik Servis</a>
+                        <a href="/teknik-servis">Teknik Servis</a>
                         <div class="navbar-drop-menu">
 
                             <div class="navbar-drop-menu-flex">
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
                                         <a href="">
-                                            <img src="assets/img/navbar/inspire.png" alt="">
+                                            <img src="/assets/img/navbar/inspire.png" alt="">
                                         </a>
                                     </div>
 
                                     <div class="navbar-drop-menu-part-models-side">
-                                        <h3 class="title-1"><a href="">Inspire Serisi</a></h3>
+                                        <h3 class="title-1"><a href="/teknik-servis/inspire">Inspire Serisi</a></h3>
 
                                         <div class="title-2-cover">
-                                            <h4 class="title-2"><a href="">Inspire 1</a></h4>
+                                            <h4 class="title-2"><a href="/teknik-servis/inspire/inspire-1">Inspire 1</a></h4>
                                             <div class="title-3-cover">
 
                                             </div>
                                         </div>
 
                                         <div class="title-2-cover">
-                                            <h4 class="title-2"><a href="">Inspire 2</a></h4>
+                                            <h4 class="title-2"><a href="/teknik-servis/inspire/inspire-2">Inspire 2</a></h4>
                                             <div class="title-3-cover">
 
                                             </div>
@@ -109,30 +109,30 @@
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
                                         <a href="">
-                                            <img src="assets/img/navbar/phantom.png" alt="">
+                                            <img src="/assets/img/navbar/phantom.png" alt="">
                                         </a>
                                     </div>
 
                                     <div class="navbar-drop-menu-part-models-side">
-                                        <h3 class="title-1"><a href="">Phantom Serisi</a></h3>
+                                        <h3 class="title-1"><a href="/teknik-servis/phantom">Phantom Serisi</a></h3>
 
                                         <div class="title-2-cover">
-                                            <h4 class="title-2"><a href="">Phantom 3</a></h4>
+                                            <h4 class="title-2"><a href="/teknik-servis/phantom/phantom-3">Phantom 3</a></h4>
                                             <div class="title-3-cover">
-                                                <h5 class="title-3"><a href="">Standard</a></h5>
-                                                <h5 class="title-3"><a href="">Advanced</a></h5>
-                                                <h5 class="title-3"><a href="">Pro</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/phantom/phantom-3/standard">Standard</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/phantom/phantom-3/advanced">Advanced</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/phantom/phantom-3/pro">Pro</a></h5>
                                             </div>
                                         </div>
 
                                         <div class="title-2-cover">
-                                            <h4 class="title-2"><a href="">Phantom 4</a></h4>
+                                            <h4 class="title-2"><a href="/teknik-servis/phantom/phantom-4">Phantom 4</a></h4>
                                             <div class="title-3-cover">
-                                                <h5 class="title-3"><a href="">Standard</a></h5>
-                                                <h5 class="title-3"><a href="">Advanced</a></h5>
-                                                <h5 class="title-3"><a href="">Pro</a></h5>
-                                                <h5 class="title-3"><a href="">Opcidian Black</a></h5>
-                                                <h5 class="title-3"><a href="">V2</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/phantom/phantom-4/standard">Standard</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/phantom/phantom-4/advanced">Advanced</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/phantom/phantom-4/pro">Pro</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/phantom/phantom-4/obcidian-black">Opcidian Black</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/phantom/phantom-4/v2">V2</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -141,47 +141,47 @@
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
                                         <a href="">
-                                            <img src="assets/img/navbar/mavic.png" alt="">
+                                            <img src="/assets/img/navbar/mavic.png" alt="">
                                         </a>
                                     </div>
 
                                     <div class="navbar-drop-menu-part-models-side">
-                                        <h3 class="title-1"><a href="">Mavic Serisi</a></h3>
+                                        <h3 class="title-1"><a href="/teknik-servis/mavic">Mavic Serisi</a></h3>
 
                                         <div class="title-2-cover">
-                                            <h4 class="title-2"><a href="">Mavic 1</a></h4>
+                                            <h4 class="title-2"><a href="/teknik-servis/mavic/mavic-1">Mavic 1</a></h4>
                                             <div class="title-3-cover">
-                                                <h5 class="title-3"><a href="">Air</a></h5>
-                                                <h5 class="title-3"><a href="">Air 2</a></h5>
-                                                <h5 class="title-3"><a href="">Pro</a></h5>
-                                                <h5 class="title-3"><a href="">Pro Platinum</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-1/air">Air</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-1/air-2">Air 2</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-1/pro">Pro</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-1/pro-platinum">Pro Platinum</a></h5>
                                             </div>
                                         </div>
 
                                         <div class="title-2-cover">
-                                            <h4 class="title-2"><a href="">Mavic 2</a></h4>
+                                            <h4 class="title-2"><a href="/teknik-servis/mavic/mavic-2">Mavic 2</a></h4>
                                             <div class="title-3-cover">
-                                                <h5 class="title-3"><a href="">Zoom</a></h5>
-                                                <h5 class="title-3"><a href="">Pro</a></h5>
-                                                <h5 class="title-3"><a href="">Dual</a></h5>
-                                                <h5 class="title-3"><a href="">Advanced</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2/zoom">Zoom</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2/pro">Pro</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2/dual">Dual</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2/advanced">Advanced</a></h5>
                                             </div>
                                         </div>
 
                                         <div class="title-2-cover">
-                                            <h4 class="title-2"><a href="">Mavic 2 Enterprise</a></h4>
+                                            <h4 class="title-2"><a href="/teknik-servis/mavic/mavic-2-enterprise">Mavic 2 Enterprise</a></h4>
                                             <div class="title-3-cover">
-                                                <h5 class="title-3"><a href="">Dual</a></h5>
-                                                <h5 class="title-3"><a href="">Zoom</a></h5>
-                                                <h5 class="title-3"><a href="">Advanced</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2-enterprise/dual">Dual</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2-enterprise/zoom">Zoom</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2-enterprise/advanced">Advanced</a></h5>
                                             </div>
                                         </div>
 
                                         <div class="title-2-cover">
-                                            <h4 class="title-2"><a href="">Mavic Mini</a></h4>
+                                            <h4 class="title-2"><a href="/teknik-servis/mavic/mavic-mini">Mavic Mini</a></h4>
                                             <div class="title-3-cover">
-                                                <h5 class="title-3"><a href="">Mini 1</a></h5>
-                                                <h5 class="title-3"><a href="">Mini 2</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-mini/mini-1">Mini 1</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-mini/mini-2">Mini 2</a></h5>
                                             </div>
                                         </div>
 
@@ -191,15 +191,15 @@
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
                                         <a href="">
-                                            <img src="assets/img/navbar/spark.png" alt="">
+                                            <img src="/assets/img/navbar/spark.png" alt="">
                                         </a>
                                     </div>
 
                                     <div class="navbar-drop-menu-part-models-side">
-                                        <h3 class="title-1"><a href="">Spark Serisi</a></h3>
+                                        <h3 class="title-1"><a href="/teknik-servis/spark">Spark Serisi</a></h3>
 
                                         <div class="title-2-cover">
-                                            <h4 class="title-2"><a href="">Spark</a></h4>
+                                            <h4 class="title-2"><a href="/teknik-servis/spark/spark">Spark</a></h4>
                                         </div>
 
                                     </div>
@@ -280,7 +280,7 @@
 
             <div class="footer-top-bottom">
                 <div class="footer-logo">
-                    <a href="/"><img src="assets/img/logo/logo-white.svg" alt=""></a>
+                    <a href="/"><img src="/assets/img/logo/logo-white.svg" alt=""></a>
                 </div>
 
                 <ul class="footer-top-bottom-list">
@@ -321,18 +321,18 @@
     </script>
 
     <!-- JQUERY -->
-    <script src="assets/js/jquery/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/jquery/jquery-ui-1.12.1.min.js"></script>
+    <script src="/assets/js/jquery/jquery-3.5.1.min.js"></script>
+    <script src="/assets/js/jquery/jquery-ui-1.12.1.min.js"></script>
 
     <!-- BOOTSTRAP -->
-    <script src="assets/js/bootstrap/popper-1.14.7.min.js"></script>
-    <script src="assets/js/bootstrap/bootstrap-4.3.1.min.js"></script>
+    <script src="/assets/js/bootstrap/popper-1.14.7.min.js"></script>
+    <script src="/assets/js/bootstrap/bootstrap-4.3.1.min.js"></script>
 
     <!-- COOKIES -->
-    <script src="assets/js/cookies.js"></script>
+    <script src="/assets/js/cookies.js"></script>
 
     <!-- SCRIPTS -->
-    <script src="assets/js/scripts.js?v=1.0"></script>
+    <script src="/assets/js/scripts.js?v=1.0"></script>
 
 
 </body>
