image alt attr edited

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,31 +8,31 @@
 
         <li class="slider-item active-item">
             <div class="slider-icon">
-                <img src="assets/img/slider/slider1.jpg" alt="slider1.jpg">
+                <img src="assets/img/slider/slider1.jpg" alt="drone-tamiri-slider">
             </div>
 
             <div class="slider-image">
-                <img src="assets/img/slider/slider1.jpg" alt="slider1.jpg">
+                <img src="assets/img/slider/slider1.jpg" alt="drone-tamiri-slider">
             </div>
         </li>
 
         <li class="slider-item">
             <div class="slider-icon">
-                <img src="assets/img/slider/slider2.jpg" alt="slider1.jpg">
+                <img src="assets/img/slider/slider2.jpg" alt="drone-yedek-parca-ve-aksesuar-slider">
             </div>
 
             <div class="slider-image">
-                <img src="assets/img/slider/slider2.jpg" alt="slider1.jpg">
+                <img src="assets/img/slider/slider2.jpg" alt="drone-yedek-parca-ve-aksesuar-slider">
             </div>
         </li>
 
         <li class="slider-item">
             <div class="slider-icon">
-                <img src="assets/img/slider/slider3.jpg" alt="slider1.jpg">
+                <img src="assets/img/slider/slider3.jpg" alt="yeni-drone-satın-al-2-yil-boyunca-teknik-serviste-yuzde-5-indirim-kap-slider">
             </div>
 
             <div class="slider-image">
-                <img src="assets/img/slider/slider3.jpg" alt="slider1.jpg">
+                <img src="assets/img/slider/slider3.jpg" alt="yeni-drone-satın-al-2-yil-boyunca-teknik-serviste-yuzde-5-indirim-kap-slider">
             </div>
         </li>
 
@@ -47,19 +47,19 @@
 <section class="three-cards">
     <div class="part-3">
         <div class="three-card">
-            <a href="teknik-servis"><img src="assets/img/slider/slider3.jpg" alt=""></a>
+            <a href="teknik-servis"><img src="assets/img/slider/slider3.jpg" alt="yeni-drone-satın-al-2-yil-boyunca-teknik-serviste-yuzde-5-indirim-kap-slider"></a>
         </div>
     </div>
 
     <div class="part-3">
         <div class="three-card">
-            <a href="magaza"><img src="assets/img/slider/slider2.jpg" alt=""></a>
+            <a href="magaza"><img src="assets/img/slider/slider2.jpg" alt="drone-yedek-parca-ve-aksesuar-slider"></a>
         </div>
     </div>
 
     <div class="part-3">
         <div class="three-card">
-            <a href="blog"><img src="assets/img/slider/slider1.jpg" alt=""></a>
+            <a href="blog"><img src="assets/img/slider/slider1.jpg" alt="drone-tamiri-slider"></a>
         </div>
     </div>
 </section>
