--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -68,8 +68,8 @@
 
             <div class="navbar-brand">
                 <a href="/">
-                    <img class="navbar-logo-white" src="/assets/img/logo/logo-white.svg" alt="">
-                    <img class="navbar-logo-black" src="/assets/img/logo/logo-black.svg" alt="">
+                    <img class="navbar-logo-white" src="/assets/img/logo/logo-white.svg" alt="logo-white">
+                    <img class="navbar-logo-black" src="/assets/img/logo/logo-black.svg" alt="logo-black">
                 </a>
             </div>
 
@@ -83,7 +83,7 @@
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
                                         <a href="">
-                                            <img src="/assets/img/navbar/inspire.png" alt="">
+                                            <img src="/assets/img/navbar/inspire.png" alt="dji-inspire">
                                         </a>
                                     </div>
 
@@ -109,7 +109,7 @@
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
                                         <a href="">
-                                            <img src="/assets/img/navbar/phantom.png" alt="">
+                                            <img src="/assets/img/navbar/phantom.png" alt="dji-phantom">
                                         </a>
                                     </div>
 
@@ -141,7 +141,7 @@
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
                                         <a href="">
-                                            <img src="/assets/img/navbar/mavic.png" alt="">
+                                            <img src="/assets/img/navbar/mavic.png" alt="dji-mavic">
                                         </a>
                                     </div>
 
@@ -191,7 +191,7 @@
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
                                         <a href="">
-                                            <img src="/assets/img/navbar/spark.png" alt="">
+                                            <img src="/assets/img/navbar/spark.png" alt="dji-spark">
                                         </a>
                                     </div>
 
@@ -280,7 +280,7 @@
 
             <div class="footer-top-bottom">
                 <div class="footer-logo">
-                    <a href="/"><img src="/assets/img/logo/logo-white.svg" alt=""></a>
+                    <a href="/"><img src="/assets/img/logo/logo-white.svg" alt="logo-white"></a>
                 </div>
 
                 <ul class="footer-top-bottom-list">
@@ -305,7 +305,7 @@
 
             <div class="developer-logo">
                 <a href="https://yusufcode.com" target="_blank">
-                    <img src="https://yusufcode.com/src/img/logo/logo.png" alt="">
+                    <img src="https://yusufcode.com/src/img/logo/logo.png" alt="yusufcode-logo">
                 </a>
             </div>
         </div>
