href added to navbar image

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -82,7 +82,7 @@
                             <div class="navbar-drop-menu-flex">
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
-                                        <a href="">
+                                        <a href="/teknik-servis/inspire">
                                             <img src="/assets/img/navbar/inspire.png" alt="dji-inspire">
                                         </a>
                                     </div>
@@ -108,7 +108,7 @@
 
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
-                                        <a href="">
+                                        <a href="/teknik-servis/phantom">
                                             <img src="/assets/img/navbar/phantom.png" alt="dji-phantom">
                                         </a>
                                     </div>
@@ -140,7 +140,7 @@
 
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
-                                        <a href="">
+                                        <a href="/teknik-servis/mavic">
                                             <img src="/assets/img/navbar/mavic.png" alt="dji-mavic">
                                         </a>
                                     </div>
@@ -190,7 +190,7 @@
 
                                 <div class="navbar-drop-menu-part">
                                     <div class="navbar-drop-menu-part-image-side">
-                                        <a href="">
+                                        <a href="spark">
                                             <img src="/assets/img/navbar/spark.png" alt="dji-spark">
                                         </a>
                                     </div>
