--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -41,7 +41,7 @@
     <link rel="icon" href="/assets/img/logo/favicon.svg" sizes="16x16">
 
     <!-- WEBSITE STYLE -->
-    <link rel="stylesheet" href="/assets/css/style.css?v=1.6">
+    <link rel="stylesheet" href="/assets/css/style.css?v=1.7">
 
     <!-- TITLE -->
     <% if (title) { %>
@@ -231,82 +231,85 @@
         </div>
     </nav>
 
+    <!-- CONTENT -->
     <%- body %>
 
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="footer-top">
+        <div class="container">
+            <div class="footer-top">
 
-            <div class="footer-top-menus">
-                <div class="footer-top-part ">
-                    <h3>Teknik Servis</h3>
-                    <ul>
-                        <li><a href="">Inspire</a></li>
-                        <li><a href="">Phantom</a></li>
-                        <li><a href="">Mavic</a></li>
-                        <li><a href="">Spark</a></li>
-                    </ul>
+                <div class="footer-top-menus">
+                    <div class="footer-top-part ">
+                        <h3>Teknik Servis</h3>
+                        <ul>
+                            <li><a href="">Inspire</a></li>
+                            <li><a href="">Phantom</a></li>
+                            <li><a href="">Mavic</a></li>
+                            <li><a href="">Spark</a></li>
+                        </ul>
+                    </div>
+    
+                    <div class="footer-top-part ">
+                        <h3>Yedek Parça & Aksesuar</h3>
+                        <ul>
+                            <li><a href="">Batarya</a></li>
+                            <li><a href="">Menzil Arttırıcı Anten</a></li>
+                            <li><a href="">VR Gözlük</a></li>
+                            <li><a href="">Özel Drone Çantası</a></li>
+                        </ul>
+                    </div>
+    
+                    <div class="footer-top-part ">
+                        <h3>Blog</h3>
+                        <ul>
+                            <li><a href="">Drone Nasıl Uçar?</a></li>
+                            <li><a href="">Drone Uçurma İpuçları</a></li>
+                            <li><a href="">Drone Tarihi</a></li>
+                            <li><a href="">Drone'larınızı Nasıl Tamir Ediyoruz?</a></li>
+                        </ul>
+                    </div>
+    
+                    <div class="footer-top-part ">
+                        <h3>İletişim</h3>
+                        <ul>
+                            <li><i class="fas fa-phone-alt"></i><a href="tel:+90 (533) 735 7895">+90 (533) 735 7895</a></li>
+                            <li><i class="fas fa-envelope"></i><a href="mailto:iletisim@djidestek.com">iletisim@djidestek.com</a></li>
+                            <li><i class="fas fa-map-marker-alt"></i><span>Caferağa Mah. Nail Bey Sk. No:7/A KADIKÖY/İSTANBUL</span></li>
+                        </ul>
+                    </div>
                 </div>
-
-                <div class="footer-top-part ">
-                    <h3>Yedek Parça & Aksesuar</h3>
-                    <ul>
-                        <li><a href="">Batarya</a></li>
-                        <li><a href="">Menzil Arttırıcı Anten</a></li>
-                        <li><a href="">VR Gözlük</a></li>
-                        <li><a href="">Özel Drone Çantası</a></li>
+    
+                <div class="footer-top-bottom">
+                    <div class="footer-logo">
+                        <a href="/"><img src="/assets/img/logo/logo-white.svg" alt="logo-white"></a>
+                    </div>
+    
+                    <ul class="footer-top-bottom-list">
+                        <li><a href="/teknik-servis">Teknik Servis</a></li>
+                        <li><a href="/magaza">Yedek Parça ve Aksesuar</a></li>
+                        <li><a href="/blog">Blog</a></li>
+                        <li><a href="/iletisim">İletişim</a></li>
                     </ul>
-                </div>
-
-                <div class="footer-top-part ">
-                    <h3>Blog</h3>
-                    <ul>
-                        <li><a href="">Drone Nasıl Uçar?</a></li>
-                        <li><a href="">Drone Uçurma İpuçları</a></li>
-                        <li><a href="">Drone Tarihi</a></li>
-                        <li><a href="">Drone'larınızı Nasıl Tamir Ediyoruz?</a></li>
+    
+                    <ul class="footer-top-bottom-social">
+                        <li><a href="https://instagram.com/dji.destek" target="_blank"><i class="fab fa-instagram"></i></a></li>
                     </ul>
+    
                 </div>
-
-                <div class="footer-top-part ">
-                    <h3>İletişim</h3>
-                    <ul>
-                        <li><i class="fas fa-phone-alt"></i><a href="tel:+90 (533) 735 7895">+90 (533) 735 7895</a></li>
-                        <li><i class="fas fa-envelope"></i><a href="mailto:iletisim@djidestek.com">iletisim@djidestek.com</a></li>
-                        <li><i class="fas fa-map-marker-alt"></i><span>Caferağa Mah. Nail Bey Sk. No:7/A KADIKÖY/İSTANBUL</span></li>
-                    </ul>
-                </div>
+    
             </div>
-
-            <div class="footer-top-bottom">
-                <div class="footer-logo">
-                    <a href="/"><img src="/assets/img/logo/logo-white.svg" alt="logo-white"></a>
+    
+            <div class="footer-bottom">
+                <div class="copyright-text">
+                    <p>Tüm Hakları Saklıdır &copy; Dji Destek</p>
                 </div>
-
-                <ul class="footer-top-bottom-list">
-                    <li><a href="/teknik-servis">Teknik Servis</a></li>
-                    <li><a href="/magaza">Yedek Parça ve Aksesuar</a></li>
-                    <li><a href="/blog">Blog</a></li>
-                    <li><a href="/iletisim">İletişim</a></li>
-                </ul>
-
-                <ul class="footer-top-bottom-social">
-                    <li><a href="https://instagram.com/dji.destek" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                </ul>
-
-            </div>
-
-        </div>
-
-        <div class="footer-bottom">
-            <div class="copyright-text">
-                <p>Tüm Hakları Saklıdır &copy; Dji Destek</p>
-            </div>
-
-            <div class="developer-logo">
-                <a href="https://yusufcode.com" target="_blank">
-                    <img src="https://yusufcode.com/src/img/logo/logo.png" alt="yusufcode-logo">
-                </a>
+    
+                <div class="developer-logo">
+                    <a href="https://yusufcode.com" target="_blank">
+                        <img src="https://yusufcode.com/src/img/logo/logo.png" alt="yusufcode-logo">
+                    </a>
+                </div>
             </div>
         </div>
     </footer>
